objects/Product_Group_Conjunction__c.object
<CustomObject>
    <label>Product Group Conjunction</label>
    <nameField>
        <displayFormat>PGC-{0000}</displayFormat>
        <label>Product Group Conjunction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Group Conjunctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>GSI_Market__c</fullName>
        <formula>TEXT(Google_Shopping_Information__r.Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GSI Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Product Group Conjunctions</relationshipLabel>
        <relationshipName>Product_Group_Conjunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GSI_Product_Code__c</fullName>
        <formula>Google_Shopping_Information__r.SAP_Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GSI Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Shopping_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Google Shopping Information</label>
        <referenceTo>Google_Shopping__c</referenceTo>
        <relationshipLabel>Product Group Conjunctions</relationshipLabel>
        <relationshipName>Product_Group_Conjunctions</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>